@@ -90,6 +90,9 @@ BUG FIXES
     o	as(I(1), "vector") and similar coercions from objects of
 	"unregistered" S3 classes now work.
 
+    o	srcref records produced by parse() and parse_Rd() did not record
+    	the encoding of the source file.  (Reported by Romain Francois.)
+
     o	The X11 version of View() was misbehaving in MBCS locales, and
  	PgUp/PgDn now behave better, thanks to a patch from Ei-ji Nakama.
 
